# Adaptive-Live-Translator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/glossaries/: ml-conference-en-ko.json
data/speaker_profiles/: demo_speaker.json
data/translation_memory/: en-ko.jsonl
demo/: index.html
docker/: Dockerfile  docker-compose.yaml
docs/: architecture.md  evaluation.md  getting_started.md  model_licenses.md  prompt_template.md
notebooks/: 01_smoke_test.ipynb
scripts/: build_tm_index.py  download_models.py  eval_streamlaal.py  test_client.py  train_speaker_lora.py
src/: __init__.py
src/api/: server.py  ws_handler.py
src/asr/: __init__.py  align_att.py  base.py  whisper_streaming.py
src/context/: __init__.py  glossary.py  prompt_builder.py  rag.py  translation_memory.py
src/personalization/: __init__.py  lora_loader.py  speaker_id.py  speaker_profile.py
src/pipeline/: __init__.py  session.py  streaming_loop.py
src/translator/: __init__.py  base.py  policies.py  qwen_translator.py
src/tts/: __init__.py  cosyvoice.py
src/utils/: __init__.py  audio.py  metrics.py
tests/: conftest.py  test_asr.py  test_pipeline.py  test_rag.py  test_translator.py
