[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-live-translator"
version = "0.1.0"
description = "Context-aware real-time speech translation with RAG + speaker adaptation"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
